--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     box-sizing:border-box;
 }
 body{
-width:100%;
-height:100%;
+width:100vw;
+height:100vh;
 margin:33% 0%;
 padding:0%;
 color:#fff;
